--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
                 <!-- Header inferiore: -->
                 <div class="head_inf flexed">
                     <div class="headinf_text">
-
+                        <h1>Understand, recognize and develop your people</h1>
+                        <p class="main_paragraph">Teambit helps teams create a high performing culture with regular feedback.</p>
+                        <div>
+                            <button><img src="img/google-logo.svg">Sign up with google</button>
+                            <span>or</span>
+                            <button><img src="img/slack-logo.svg">Sign up with Slack</button>
+                            <p>or use your email adress <i class="fas fa-arrow-right"></i></p>
+                        </div>
+                    </div>
+                    <div class="headinf_image">
+                        <img src="img/illustration-main.jpg" alt="">
                     </div>
                 </div>
             </div>
