Lavori in corso

--- a/index.html
+++ b/index.html
@@ -58,23 +58,32 @@
 
     <!-- Inizio del corpo della pagina -->
     <main>
+        <div class="second main_container">
+            <div class="little_container">
+                <!-- Prima sezione del corpo della pagina -->
+                <section id="first_pink_section">
+                    <h2>Traditional people processes lead to disengagement and turnover.</h2>
+                    <div class="allblocks_container flexed">
+                        <div class="block">
+                            <img src="img/hardcore.png" alt="">
+                            <p>They are hardcore, formal and disconnected</p>
+                        </div>
+                        <div class="block">
+                            <img src="img/nofeedback.png" alt="">
+                        </div>
+                        <div class="block">
+                            <img class="notsafe_img" src="img/notsafe.png" alt="">
+                        </div>
+                    </div>
+                </section>
 
-        <!-- Prima sezione del corpo della pagina -->
-        <section>
 
-        </section>
+                <!-- Seconda sezione del corpo della pagina -->
+                <section id="second_pink_section">
 
-
-        <!-- Seconda sezione del corpo della pagina -->
-        <section>
-
-        </section>
-
-
-        <!-- Terza sezione del corpo della pagina -->
-        <section>
-
-        </section>
+                </section>
+            </div>
+        </div>
 
     </main>
     <!-- Fine del corpo della pagina -->
