Lavori in corso

--- a/index.html
+++ b/index.html
@@ -58,32 +58,107 @@
 
     <!-- Inizio del corpo della pagina -->
     <main>
-        <div class="second main_container">
-            <div class="little_container">
-                <!-- Prima sezione del corpo della pagina -->
-                <section id="first_pink_section">
-                    <h2>Traditional people processes lead to disengagement and turnover.</h2>
-                    <div class="allblocks_container flexed">
-                        <div class="block">
-                            <img src="img/hardcore.png" alt="">
-                            <p>They are hardcore, formal and disconnected</p>
+        <!-- Inizio prima sezione generale del corpo della pagina -->
+        <section>
+            <div class="my_main main_container">
+                <div class="little_container">
+                    <!-- Prima sottosezione del corpo rosa della pagina -->
+                    <section id="first_pink_section">
+                        <h2>Traditional people processes lead to disengagement and turnover.</h2>
+                        <div class="allblocks_container flexed">
+                            <div class="block">
+                                <img src="img/hardcore.png" class="first_img" alt="">
+                                <p>They are hardcore, formal and disconnected</p>
+                            </div>
+                            <div class="block">
+                                <img src="img/nofeedback.png" alt="">
+                                <p>They don't encourage regular feedback.</p>
+                            </div>
+                            <div class="block">
+                                <img class="notsafe_img" src="img/notsafe.png" alt="">
+                                <p>They don't make it safe to speak up.</p>
+                            </div>
                         </div>
-                        <div class="block">
-                            <img src="img/nofeedback.png" alt="">
-                        </div>
-                        <div class="block">
-                            <img class="notsafe_img" src="img/notsafe.png" alt="">
-                        </div>
-                    </div>
-                </section>
+                        <img class="singolar" src="img/before.png" alt="">
+                    </section>
 
 
-                <!-- Seconda sezione del corpo della pagina -->
-                <section id="second_pink_section">
-
-                </section>
+                    <!-- Seconda sottosezione del corpo rosa della pagina -->
+                    <section id="second_pink_section">
+                        <h2>Traditional people processes lead to disengagement and turnover.</h2>
+                        <div class="allblocks_container flexed">
+                            <div class="block">
+                                <img src="img/lightweight.png" class="first_second_img" alt="">
+                                <p>They are hardcore, formal and disconnected</p>
+                            </div>
+                            <div class="block">
+                                <img src="img/feedbacksuggestions.png" alt="">
+                                <p>They don't encourage regular feedback.</p>
+                            </div>
+                            <div class="block">
+                                <img src="img/safe.png" class="safe_img" alt="">
+                                <p>They don't make it safe to speak up.</p>
+                            </div>
+                        </div>
+                        <img class="singolar" src="img/after.png" alt="">
+                        <h2>Here is how it works</h2>
+                    </section>
+                </div>
             </div>
-        </div>
+        </section>
+        <!-- Fine sezione bianco-rosa -->
+
+
+        <!-- Inizio seconda sezione generale del corpo della pagina -->
+        <section>
+            <div class="container">
+                <!-- Primo blocco -->
+                <div class="second_block flexed">
+                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                    <div class="text_container flexed">
+                        <h2>Feedback to help teammates improve</h2>
+                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+                        <img src="img/communication.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Secondo blocco -->
+                <div class="second_block flexed">
+                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                    <div class="text_container flexed">
+                        <h2>Feedback to help teammates improve</h2>
+                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+                        <img src="img/communication.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Terzo blocco -->
+                <div class="second_block flexed">
+                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                    <div class="text_container flexed">
+                        <h2>Feedback to help teammates improve</h2>
+                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+                        <img src="img/communication.jpg" alt="">
+                    </div>
+                </div>
+
+                <!-- Quarto blocco -->
+                <div class="second_block flexed no_margin">
+                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                    <div class="text_container flexed">
+                        <h2>Feedback to help teammates improve</h2>
+                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
+                        <img src="img/communication.jpg" alt="">
+                    </div>
+                </div>
+
+            </div>
+        </section>
+        <!-- Fine seconda sezione generale del corpo della pagina -->
 
     </main>
     <!-- Fine del corpo della pagina -->
