--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <!-- Header superiore: -->
                 <div class="head_sup flexed">
                     <div class="logos">
-                        <img src="img/logo.svg" alt="">
+                        <img src="img/TB_logo.png" alt="">
                     </div>
                     <div class="nav_space">
                         <ul>
@@ -29,7 +29,7 @@
                             <li>Pricing</li>
                             <li>Blog</li>
                             <li>Sign in</li>
-                            <button>Sign Up</button>
+                            <button><img src="img/google-logo.svg">Sign Up</button>
                         </ul>
                     </div>
                 </div>
@@ -92,7 +92,7 @@
                                 <p>They are hardcore, formal and disconnected</p>
                             </div>
                             <div class="block">
-                                <img src="img/feedbacksuggestions.png" alt="">
+                                <img src="img/feedbacksuggestions.png" class="margin_img" alt="">
                                 <p>They don't encourage regular feedback.</p>
                             </div>
                             <div class="block">
@@ -124,41 +124,72 @@
                 </div>
 
                 <!-- Secondo blocco -->
-                <div class="second_block flexed">
-                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                <div class="second_block margin_block flexed">
                     <div class="text_container flexed">
-                        <h2>Feedback to help teammates improve</h2>
-                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <h2>Surveys to help the team be better</h2>
+                        <p>Get real-time insights into your team with research-backed, lightweight and regular surveys.</p>
                         <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
-                        <img src="img/communication.jpg" alt="">
+                        <img src="img/insights.jpg" alt="">
                     </div>
+                    <img class="principal_img" src="img/employee-survey.jpg" alt="">
                 </div>
 
                 <!-- Terzo blocco -->
                 <div class="second_block flexed">
-                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                    <img class="principal_img" src="img/performance-review.jpg" alt="">
                     <div class="text_container flexed">
-                        <h2>Feedback to help teammates improve</h2>
-                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <h2>Reviews to help teammates get a fair evaluation</h2>
+                        <p>Make better compensation and promotion decisions with objective and quick performance reviews.</p>
                         <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
-                        <img src="img/communication.jpg" alt="">
+                        <img src="img/review.jpg" alt="">
                     </div>
                 </div>
 
                 <!-- Quarto blocco -->
-                <div class="second_block flexed no_margin">
-                    <img class="principal_img" src="img/employee-feedback.jpg" alt="">
+                <div class="second_block flexed margin_block">
                     <div class="text_container flexed">
-                        <h2>Feedback to help teammates improve</h2>
-                        <p>Empower your teammates to know in real time what they are doing well and what they need to improve</p>
+                        <h2>Praise to help teammates feel valued</h2>
+                        <p>Make it a habit to recognize and praise people who do great work.</p>
                         <a href="#">Learn more <i class="fas fa-arrow-right"></i></a>
-                        <img src="img/communication.jpg" alt="">
+                        <img src="img/recognition.jpg" alt="">
                     </div>
+                    <img class="principal_img" src="img/employee-survey.jpg" alt="">
                 </div>
-
             </div>
         </section>
         <!-- Fine seconda sezione generale del corpo della pagina -->
+
+
+        <!-- Inizio terza sezione generale del corpo della pagina -->
+        <div class="getstarted_container main_container">
+            <div class="getstarted_section flexed">
+                <i class="fas fa-quote-left quote"></i>
+                <h1>See Tambit for yourself.<br>Get Started in seconds <img src="img/happy.svg" alt=""></h1>
+                <div class="getstarted_text">
+                    <p>We are experiencing what Gallup calls 'an employee engagement crisis'. Just one-third of people at work are engaged.</p>
+                    <p>To improve performance and engagement companies rely on the same principles as industrial-age factories. But all those annual performance reviews and hundred-question surveys don't work anymore. People want regular feedback. Leaders
+                        who don't embrace this change end up with misaligned, disengaged and dwindling team.</p>
+                    <p>We designed Teambit to change that. It empowers teams to make feedback a daily habit. Everybody knows what they are doing well and what they need to improve, leading to better performing, engaged and happier teams.</p>
+                    <p>We are on a mission to make worklife exciting. Come join us.
+                    </p>
+                    <div class="founders_wrapper flexed">
+                        <img src="img/alex.png" alt="">
+                        <img src="img/bohdan.png" alt="">
+                        <div class="founders_info">
+                            <p class="founders">Alex and Bohdan</p>
+                            <span>Co-Founders at Teambit</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="getstarted_buttons">
+                    <button><img src="img/google-logo.svg">Sign up with google</button>
+                    <span>or</span>
+                    <button><img src="img/slack-logo.svg">Sign up with Slack</button>
+                    <p>or use your email adress <i class="fas fa-arrow-right"></i></p>
+                </div>
+            </div>
+        </div>
+        <!-- Fine terza sezione generale del corpo della pagina -->
 
     </main>
     <!-- Fine del corpo della pagina -->
@@ -166,7 +197,64 @@
 
     <!-- Inizio del footer -->
     <footer>
-
+        <div class="footer_container main_container">
+            <div class="little_container flexed">
+                <div class="teambit_scope flexed">
+                    <img src="img/TB_logo_small.png" alt="">
+                    <p><span>Teambit</span> helps teams create high performing cultures by making feedback a daily habit.</p>
+                </div>
+                <div class="footer_nav flexed">
+                    <div>
+                        <h3>Product</h3>
+                        <ul>
+                            <li>Feedback</li>
+                            <li>Surveys</li>
+                            <li>Reviews</li>
+                            <li>Praise</li>
+                            <li>Slack integration</li>
+                            <li>Schedule a demo</li>
+                            <li>Pricing</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>About</h3>
+                        <ul>
+                            <li>Feedback</li>
+                            <li>Surveys</li>
+                            <li>Reviews</li>
+                            <li>Praise</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Connect</h3>
+                        <ul>
+                            <li>Feedback</li>
+                            <li>Surveys</li>
+                            <li>Reviews</li>
+                            <li>Praise</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>Lobs</h3>
+                        <ul>
+                            <li>Feedback</li>
+                            <li>Surveys</li>
+                            <li>Reviews</li>
+                            <li>Praise</li>
+                        </ul>
+                    </div>
+                    <div>
+                        <h3>From the blog</h3>
+                        <ul>
+                            <li>How to change your company culture: a four-step framework</li>
+                            <li>How teams can be more productive by killing 8-hour workday</li>
+                            <li>How to build high performing teams inspired by nature</li>
+                            <li>View all <i class="fas fa-long-arrow-alt-right"></i></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
     </footer>
     <!-- Fine del footer -->
 </body>
