--- a/index.html
+++ b/index.html
@@ -72,11 +72,11 @@
                             </div>
                             <div class="block">
                                 <img src="img/nofeedback.png" alt="">
-                                <p>They don't encourage regular feedback.</p>
+                                <p>They don't encourage regular feedback</p>
                             </div>
                             <div class="block">
                                 <img class="notsafe_img" src="img/notsafe.png" alt="">
-                                <p>They don't make it safe to speak up.</p>
+                                <p>They don't make it safe to speak up</p>
                             </div>
                         </div>
                         <img class="singolar" src="img/before.png" alt="">
@@ -89,15 +89,15 @@
                         <div class="allblocks_container flexed">
                             <div class="block">
                                 <img src="img/lightweight.png" class="first_second_img" alt="">
-                                <p>They are hardcore, formal and disconnected</p>
+                                <p>It's lightweight fun and inerconnected</p>
                             </div>
                             <div class="block">
                                 <img src="img/feedbacksuggestions.png" class="margin_img" alt="">
-                                <p>They don't encourage regular feedback.</p>
+                                <p>It encourages regular feedback with contextual requests</p>
                             </div>
                             <div class="block">
                                 <img src="img/safe.png" class="safe_img" alt="">
-                                <p>They don't make it safe to speak up.</p>
+                                <p>It creates a safe environment for dialog</p>
                             </div>
                         </div>
                         <img class="singolar" src="img/after.png" alt="">
